# C_Arnoud_Calibrated_Detector

./: CMakeLists.txt  PETS.conf  PETS_View_005.conf  README.md  TownCentre.conf  tud_stadtmitte.conf
src/: BoundingBox.cpp  BoundingBox.h  C_Arnoud_Calibrated_Detector.cpp  Detector.cpp  Detector.h  Pyramid.cpp  Pyramid.h  utils.cpp  utils.h
